--- a/public/global.css
+++ b/public/global.css
@@ -1,9 +1,3 @@
-html, body {
-	position: relative;
-	width: 100%;
-	height: 100%;
-} 
-
 body {
 	color: #333;
 	background: #f4f5ff;
@@ -11,4 +5,144 @@ body {
 	padding: 30px;
 	box-sizing: border-box;
 	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
+}
+
+.receipt {
+	font-family: "Courier New", Courier, monospace;
+}
+
+h3 {
+	font-family: "Montserrat", sans-serif;
+}
+
+ul {
+	margin: 0;
+	padding: 0;
+}
+
+@keyframes fadeInOpacity {
+	0% {
+		opacity: 0;
+	}
+	100% {
+		opacity: 1;
+	}
+}
+
+li {
+	display: flex;
+	align-items: end;
+	justify-content: space-between;
+	opacity: 1;
+	animation-name: fadeInOpacity;
+	animation-iteration-count: 1;
+	animation-timing-function: ease-in;
+	animation-duration: 0, 0.5s;
+	text-transform: uppercase;
+}
+
+.receipt {
+	height: max-content;
+	padding: 20px;
+	font-family: "Courier New", Courier, monospace;
+}
+
+.receipt p {
+	margin: 0;
+}
+
+hr {
+	border: none;
+	border-top: 3px dotted #333;
+	margin: 20px;
+}
+
+h3 {
+	text-align: center;
+	font-weight: 500;
+}
+
+.total {
+	text-align: center;
+	font-weight: bold;
+	font-size: 16px;
+}
+
+.itemText {
+	width: 200px;
+}
+
+.paper {
+	background: whitesmoke;
+	padding: 30px;
+	position: relative;
+}
+
+.paper,
+.paper::before,
+.paper::after {
+	box-shadow: rgba(100, 100, 111, 0.1) 0px 7px 20px 0px;
+	border: 1px solid whitesmoke;
+}
+
+.paper::before,
+.paper::after {
+	content: "";
+	position: absolute;
+	height: 100%;
+	width: 99%;
+	background-color: whitesmoke;
+}
+
+.paper::before {
+	right: 15px;
+	top: 0;
+	transform: rotate(2deg);
+	z-index: -1;
+}
+
+.paper::after {
+	top: 5px;
+	right: -5px;
+	transform: rotate(-2deg);
+	z-index: -2;
+}
+
+:root {
+	--form-control-color: #373e98;
+}
+
+.finalTotals {
+	text-align: left;
+	margin: 10px 0;
+	font-size: 18px;
+}
+
+.indicator {
+	color: #3a3b3c;
+	font-size: 13px;
+	font-weight: 500;
+}
+
+.totalIndicator {
+	text-align: left;
+}
+
+@media only screen and (max-width: 768px) {
+
+	body {
+		padding: 10px;
+	}
+	
+	.receipt {
+		margin-top: 30px;
+	}
+
+	.paper {
+		position: inherit;
+	}
+
+	.paper::before, .paper::after {
+		display: none;
+	}
 }
