--- a/public/global.css
+++ b/public/global.css
@@ -70,6 +70,7 @@ h3 {
 
 .itemText {
 	width: 200px;
+	margin-top: 15px;
 }
 
 .paper {
@@ -133,7 +134,7 @@ h3 {
 	body {
 		padding: 10px;
 	}
-	
+
 	.receipt {
 		margin-top: 30px;
 	}
